// This is the public API offered by the shopping cart entity.

syntax = "proto3";

package com.example.api;

import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "ShoppingCartApi";

message AddLineItem {
  string cart_id = 1 [(kalix.field).entity_key = true];
  string product_id = 2;
  string name = 3;
  int32 quantity = 4;
}

message RemoveLineItem {
  string cart_id = 1 [(kalix.field).entity_key = true];
  string product_id = 2;
}

message GetShoppingCart {
  string cart_id = 1 [(kalix.field).entity_key = true];
}

message CheckoutShoppingCart {
  string cart_id = 1 [(kalix.field).entity_key = true];
}

message LineItem {
  string product_id = 1;
  string name = 2;
  int32 quantity = 3;
}

message Cart {
  repeated LineItem items = 2;
  bool checked_out = 3;
}

// for view
message ItemAddedView {
  string id = 1;
  LineItem item = 2;
}

message RemoveShoppingCart {
  string cart_id = 1 [(kalix.field).entity_key = true];
}

service ShoppingCartService {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "com.example.domain.ShoppingCart"
      entity_type: "shopping-cart"
      state: "com.example.domain.Cart"
      events: [
        "com.example.domain.ItemAdded",
        "com.example.domain.ItemRemoved",
        "com.example.domain.CheckedOut"]
    }
  };

  rpc AddItem (AddLineItem) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/carts/{cart_id}/items/add"
      body: "*"
    };
  }

  rpc RemoveItem (RemoveLineItem) returns (google.protobuf.Empty) {
    option (google.api.http).post = "/carts/{cart_id}/items/{product_id}/remove";
  }

  rpc GetCart (GetShoppingCart) returns (Cart) {
    option (google.api.http) = {
      get: "/carts/{cart_id}"
      additional_bindings: {
        get: "/carts/{cart_id}/items"
        response_body: "items"
      } };
  }

  // when body specified, it can't be empty body in request
  // if you don't want to specify body during sending http request, remove that body as in RemoveItem
  rpc Checkout (CheckoutShoppingCart) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/carts/{cart_id}/checkout"
      body: "*"
    };
  }

  rpc RemoveCart (RemoveShoppingCart) returns (google.protobuf.Empty) {
    option (google.api.http).post = "/carts/{cart_id}/remove";
  }
}