// These are the messages that get persisted - the events, plus the current
// state (Cart) for snapshots.

syntax = "proto3";

package com.example.domain;

option java_outer_classname = "ShoppingCartDomain";

message Product {
  string id = 1;
  string name = 2;
}

message LineItem {
  string productId = 1;
  string name = 2;
  int32 quantity = 3;
}

// The item added event.
message ItemAdded {
  string id = 1;
  LineItem item = 2;
}

// The item removed event.
message ItemRemoved {
  string id = 1;
  string productId = 2;
}

// The checked out event.
message CheckedOut {
}

// The shopping cart state.
message Cart {
  string id = 1;
  repeated LineItem items = 2;
  bool checked_out = 3;
}